--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         .navbar-custom {
             background-color: black !important;
         }
+
+        body {
+            background-color: coral !important;
+        }
     </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
