--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background-color: coral !important;
+            background-color: rgb(230.230, 230) !important;
         }
     </style>
     <!-- Required meta tags -->
@@ -34,7 +34,7 @@
 
     <h1>Online Support for Instructors and Students</h1>
     <ul>
-        <li><a href="meet/Using_Google_Meet.pdf">Using Google Meet for online classes</a></li>
+        <li><a href="meet/GoogleMeet.pdf">Using Google Meet for online classes</a></li>
         <li><a href="meet/Scheduling_Recurring_Classes_Google_Meet.pdf">Scheduling Recurring Classes with Google
                 Meet</a></li>
         <li><a href="moodle/SFAI_Moodle_Use.pdf">Moodle Resource Guide</a></li>
