--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <h3>Resource Guides:</h3>
     <ul>
         <li><a href="zoom/Zoom_setup_instructions_for_SFAI_Faculty_Staff.pdf">Zoom Setup Instructions for SFAI Faculty(Start Here)</a></li>
-        <li><a href="https://sfai.zoom.us/rec/play/vJR5d-j5q283HNGcsgSDV_5wW9Tpe_qs0CVM_PIEmknkVnAAYVGlZuMaZ7NAORKJB_fFeWJ9L4d5ilrn?continueMode=true">Zoom Meetings for Education Training</a></li>
         <li><a href="https://sfai.zoom.us/rec/play/ucYoIumtq243G9fAswSDUPArW9W-eKis1Cga8_EPmk7mAnFQMAevZ7IQZefBr9eLpOtBNxuUZZ4WFxrQ?continueMode=true">Getting Started with Zoom</a></li>
+        <li><a href="https://sfai.zoom.us/rec/play/vJR5d-j5q283HNGcsgSDV_5wW9Tpe_qs0CVM_PIEmknkVnAAYVGlZuMaZ7NAORKJB_fFeWJ9L4d5ilrn?continueMode=true">Zoom Meetings for Education Training</a></li>
         <!-- <li><a href="meet/GoogleMeet.pdf">Using Google Meet for online classes</a></li>
         <li><a href="meet/Scheduling_Recurring_Classes_Google_Meet.pdf">Scheduling Recurring Classes with Google
                 Meet</a></li>
@@ -48,6 +48,7 @@
                 List of resources to assist with teaching remotely by the College Art Association</a></li>
     </ul>
     <h3>Zoom Online Support Sessions:</h3>
+    We will be holding 6 online drop in sessions. Sessions will begin with an overview of the zoom features. Followed by an open Q&A<br><br>
     <ul>
         <li>Tues/Wed/Thurs, 3-17,18,19 2-3pm PST - Join Zoom Meeting <a href="https://zoom.us/j/818667483">https://zoom.us/j/818667483</a></li>
         <li>Tues/Wed/Thurs, 3-24,25,26 11am-12pm PST - Join Zoom Meeting <a href="https://zoom.us/j/734800927">https://zoom.us/j/734800927</a></li>
