--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
 
     <h1>Online Support for Instructors and Students</h1>
-    <h5>We now have an institutional ZOOM account, which you each can access to set up recurring class meetings, among other functionalities. While you may use a different platform, and one that may be more familiar to you, <b>we encourage you to attend a training on Zoom over the coming weeks and to consider using this more robust system for course delivery.</b></h5>
+    <p>We now have an institutional ZOOM account, which you each can access to set up recurring class meetings, among other functionalities. While you may use a different platform, and one that may be more familiar to you, <b>we encourage you to attend a training on Zoom over the coming weeks and to consider using this more robust system for course delivery.</b></p>
     <h3>Resource Guides:</h3>
     <ul>
         <li><a href="zoom/Zoom_setup_instructions_for_SFAI_Faculty_Staff.pdf">Zoom Setup Instructions for SFAI Faculty(Start Here)</a></li>
