--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 List of resources to assist with teaching remotely by the College Art Association</a></li>
     </ul>
     <h3>Zoom Online Support Sessions:</h3>
-    We will be holding 6 online drop-in sessions to supplement the training resources listed above. Sessions will begin with an overview of the Zoom features, followed by an open Q&A<br><br>
+    We will be holding 6 online drop-in sessions to supplement the training resources listed above. Sessions will begin with an overview of the Zoom features, followed by an open Q&A. If you have any trouble joining, please email support@sfai.edu.<br><br>
     <ul>
         <li>Tues/Wed/Thurs, 3-17,18,19 2-3pm PST - Join Zoom Meeting <a href="https://zoom.us/j/818667483">https://zoom.us/j/818667483</a></li>
         <li>Tues/Wed/Thurs, 3-24,25,26 11am-12pm PST - Join Zoom Meeting <a href="https://zoom.us/j/734800927">https://zoom.us/j/734800927</a></li>
