--- a/index.html
+++ b/index.html
@@ -33,16 +33,25 @@
     </nav>
 
     <h1>Online Support for Instructors and Students</h1>
-    <p>We now have an institutional ZOOM account, which you each can access to set up recurring class meetings, among other functionalities. While you may use a different platform, and one that may be more familiar to you, <b>we encourage you to attend a training on Zoom over the coming weeks and to consider using this more robust system for course delivery.</b></p>
+    <p>We now have an institutional ZOOM account, which you each can access to set up recurring class meetings, among
+        other functionalities. While you may use a different platform, and one that may be more familiar to you, <b>we
+            encourage you to attend a training on Zoom over the coming weeks and to consider using this more robust
+            system for course delivery.</b></p>
 
     <p><b>Please check this site frequently for updated content</b></p>
     <h3>Resource Guides:</h3>
     <ul>
-        <li><a href="zoom/Zoom_setup_instructions_for_SFAI_Faculty_Staff.pdf">Zoom Setup Instructions for SFAI Faculty(Start Here)</a></li>
-        <li><a href="https://sfai.zoom.us/rec/play/ucYoIumtq243G9fAswSDUPArW9W-eKis1Cga8_EPmk7mAnFQMAevZ7IQZefBr9eLpOtBNxuUZZ4WFxrQ?continueMode=true">Getting Started with Zoom</a></li>
-        <li><a href="https://sfai.zoom.us/rec/play/vJR5d-j5q283HNGcsgSDV_5wW9Tpe_qs0CVM_PIEmknkVnAAYVGlZuMaZ7NAORKJB_fFeWJ9L4d5ilrn?continueMode=true">Zoom Meetings for Education Training</a></li>
-        <li><a href="https://support.zoom.us/hc/en-us/articles/206618765-Zoom-Video-Tutorials">Zoom Video Tutorials</a></li>
-        
+        <li><a href="zoom/Zoom_setup_instructions_for_SFAI_Faculty_Staff.pdf">Zoom Setup Instructions for SFAI
+                Faculty(Start Here)</a></li>
+        <li><a
+                href="https://sfai.zoom.us/rec/play/ucYoIumtq243G9fAswSDUPArW9W-eKis1Cga8_EPmk7mAnFQMAevZ7IQZefBr9eLpOtBNxuUZZ4WFxrQ?continueMode=true">Getting
+                Started with Zoom</a></li>
+        <li><a
+                href="https://sfai.zoom.us/rec/play/vJR5d-j5q283HNGcsgSDV_5wW9Tpe_qs0CVM_PIEmknkVnAAYVGlZuMaZ7NAORKJB_fFeWJ9L4d5ilrn?continueMode=true">Zoom
+                Meetings for Education Training</a></li>
+        <li><a href="https://support.zoom.us/hc/en-us/articles/206618765-Zoom-Video-Tutorials">Zoom Video Tutorials</a>
+        </li>
+
         <!-- <li><a href="meet/GoogleMeet.pdf">Using Google Meet for online classes</a></li>
         <li><a href="meet/Scheduling_Recurring_Classes_Google_Meet.pdf">Scheduling Recurring Classes with Google
                 Meet</a></li>
@@ -53,10 +62,14 @@
                 List of resources to assist with teaching remotely by the College Art Association</a></li>
     </ul>
     <h3>Zoom Online Support Sessions:</h3>
-    We will be holding 6 online drop-in sessions to supplement the training resources listed above. Sessions will begin with an overview of the Zoom features, followed by an open Q&A. If you have any trouble joining, please email support@sfai.edu.<br><br>
+    We will be holding 6 online drop-in sessions to supplement the training resources listed above. Sessions will begin
+    with an overview of the Zoom features, followed by an open Q&A. If you have any trouble joining, please email
+    support@sfai.edu.<br><br>
     <ul>
-        <li>Tues/Wed/Thurs, 3-17,18,19 2-3pm PST - Join Zoom Meeting <a href="https://zoom.us/j/818667483">https://zoom.us/j/818667483</a></li>
-        <li>Tues/Wed/Thurs, 3-24,25,26 11am-12pm PST - Join Zoom Meeting <a href="https://zoom.us/j/734800927">https://zoom.us/j/734800927</a></li>
+        <li><b>Tuesday, March 17/Wednesday, March 18/Thursday, March 19: 2-3pm PST - </b> Join Zoom Meeting: <a
+                href="https://zoom.us/j/818667483">https://zoom.us/j/818667483</a></li>
+        <li><b>Tuesday, March 24/Wednesday, March 25/Thursday, March 26: 11am-12pm PST - </b> Join Zoom Meeting: <a
+                href="https://zoom.us/j/734800927">https://zoom.us/j/734800927</a></li>
 
     </ul>
     <h3>Some guiding principles to consider as you migrate to distance learning include:</h3>
