--- a/zoom/index.html
+++ b/zoom/index.html
@@ -25,8 +25,9 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section><img src="img/1.png" height="300"></section>
+				<section><img src="img/2.png"  height="300"></section>
+				<section><img src="img/3.png"  height="300"></section>
 			</div>
 		</div>
 
