--- a/zoom/index.html
+++ b/zoom/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-	<title>reveal.js</title>
+	<title>Introdcution to Zoom</title>
 
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/reveal.css">
@@ -27,9 +27,41 @@
 <body>
 	<div class="reveal">
 		<div class="slides">
-			<section><img src="img/1.png" height="300"></section>
-			<section><img src="img/2.png" height="300"></section>
-			<section><img src="img/3.png" height="300"></section>
+			<section><img src="img/z1.png" height="400"><br>Zoom is a remote conferencing services that combines
+				video conferencing, online meetings, chat, and mobile collaboration.</section>
+			<section><br>
+				<ul>
+					<li>SFAI is providing a Zoom account to all faculty to facilitate online class sessions</li>
+					<li class="fragment">Zoom offers a web client and a desktop client</li>
+					<li class="fragment">The desktop client has more features and is preferred for hosting classes.
+					</li>
+					<li class="fragment">In the next few slides
+						we'll go over how to install it and connect it to your SFAI account</li>
+				</ul>
+			</section>
+			<section><br>
+				<ul>
+					<li>This first step is to activate your account</li>
+					<li class="fragment"><a
+							href="https://sfai.github.io/onlinetraining/zoom/Zoom_setup_instructions_for_SFAI_Faculty_Staff.pdf">SFAI
+							setup instructions</a></li>
+					<li class="fragment">If you need support with this, email support@sfai.edu or stay in the Q&A
+						afterwards
+					</li>
+				</ul>
+			</section>
+			<section><img src="img/dl1.png" height="200">
+				<ul>
+					<li>Next go to <a href="https://sfai.zoom.us/download">https://sfai.zoom.us/download</a></li>
+					<li class="fragment">Download 'Zoom Client for Meetings' and install it</a></li>
+				</ul>
+			</section>
+			<section><img src="img/1.PNG" height="300"></section>
+			<section><img src="img/2.PNG" height="300"></section>
+			<section><img src="img/3a.PNG" height="300"></section>
+			<section><img src="img/3b.PNG" height="300"></section>
+			<section><img src="img/3c.PNG" height="300"></section>
+			<section><img src="img/3d.PNG" height="300"></section>
 		</div>
 	</div>
 
