--- a/zoom/index.html
+++ b/zoom/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-	<title>Introdcution to Zoom</title>
+	<title>Introduction to Zoom</title>
 
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/reveal.css">
@@ -27,6 +27,8 @@
 <body>
 	<div class="reveal">
 		<div class="slides">
+			<section><br>SFAI Zoom Training</section>
+
 			<section><img src="img/z1.png" height="400"><br>Zoom is a remote conferencing services that combines
 				video conferencing, online meetings, chat, and mobile collaboration.</section>
 			<section><br>
@@ -56,12 +58,87 @@
 					<li class="fragment">Download 'Zoom Client for Meetings' and install it</a></li>
 				</ul>
 			</section>
-			<section><img src="img/1.PNG" height="300"></section>
-			<section><img src="img/2.PNG" height="300"></section>
-			<section><img src="img/3a.PNG" height="300"></section>
-			<section><img src="img/3b.PNG" height="300"></section>
-			<section><img src="img/3c.PNG" height="300"></section>
-			<section><img src="img/3d.PNG" height="300"></section>
+			<section><img src="img/1.PNG" height="300"><br>When you first launch Zoom sign in with Google</section>
+			<section><img src="img/2.PNG" height="300"><br>Make sure to sign in with your SFAI account</section>
+			<section><img src="img/3.PNG" height="300"><br>You will be redirected to your webbrowser to login in,
+				then
+				Open Zoom.</section>
+			<section><img src="img/3a.PNG" height="300"><br>In the opening Zoom window
+				start with new meeting. We will talk about scheduling one a little bit later</section>
+			<section><img src="img/3e.PNG" height="300"><br>After starting a new meeting you have the option of
+				testing
+				your audio setup. Afterwards choose 'Join With Computer Audio'</section>
+			<section><img src="img/tba.png" height="300"><br>Hitting start video on the bottom toolbar will start
+				the
+				video
+				session</section>
+			<section><img src="img/tb.png">The toolbar at the bottom of the Zoom window is important to understand
+				so
+				let walk through it's functions</section>
+			<section><img src="img/tb1.png" height="300"><br>Join Audio gives you the option to adjust your Mic and
+				Speaker
+				settings </section>
+			<section><img src="img/tb3.png" height="300"><br>The video button allows you to start, stop, adjust
+				your
+				video settings and use virtual backgrounds</section>
+			<section><img src="img/inv1.png" height="300"><br>The invite button allows you to invite participants
+			</section>
+			<section><img src="img/inv2.png" height="300"><br>In the contact view, all SFAI staff Faculty and
+				students
+				are listed
+			</section>
+			<section><img src="img/inv3.png" height="300"><br>On the email tab you can compose an email to send out
+				from
+				your default email client
+			</section>
+			<section><img src="img/inv4.png" height="300"><br>You can also copy and paste the meeting URL or more
+				detailed invite and past it into an email or document i.e Moodle
+			</section>
+			<section><img src="img/ss.png" height="300"><br>Share screen allows you to share your screen with
+				participants
+			</section>
+			<section><img src="img/ss1.png" height="300"><br>You can choose to share your entire desktop
+			</section>
+			<section><img src="img/ss2.png" height="300"><br>A shared whiteboard
+			</section>
+			<section><img src="img/ss3.png" height="300"><br>Or an individual window
+			</section>
+			<section><img src="img/mp.png" height="300"><br>Manage partipants allows gives you option for individual
+				participants
+			</section>
+			<section><img src="img/mp1.png" height="300"><br>You can mute individual audio or video
+			</section>
+			<section><img src="img/mp2.png" height="300"><br>You can also promote them to the host, rename or
+				remove
+				them
+			</section>
+			<section><img src="img/c.png" height="300"><br>Chat opens a chat window on the side
+			</section>
+			<section><img src="img/c1.png" height="300"><br>You can post text and links here
+			</section>
+			<section><img src="img/c2.png" height="300"><br>At the bottom you can choose who you are chatting with,
+				eveyone or individuals
+			</section>
+			<section><img src="img/c3.png" height="300"><br>You can also save the chat history and set options for
+				whom
+				others are allowed to chat with.
+			</section>
+			<section><img src="img/r.png"><br>Record allows you to record the meeting to either your computer or the
+				Zoom cloud. You have limited storage on the Zoom cloud. Consider saving to you computer and sharing
+				as a
+				google drive link.
+			</section>
+			<section>
+				<a href="https://support.zoom.us/hc/en-us/sections/201740096-Training">The Zoom training center
+					offers
+					extensive video tutorials</a>
+			</section>
+			<section>
+				We are here to support your online efforts, please email support@sfai.edu for assistance
+			</section>
+
+
+
 		</div>
 	</div>
 
