--- a/zoom/index.html
+++ b/zoom/index.html
@@ -65,7 +65,7 @@
 				Open Zoom.</section>
 			<section><img src="img/3a.PNG" height="300"><br>In the opening Zoom window
 				start with new meeting. We will talk about scheduling one a little bit later</section>
-			<section><img src="img/3e.PNG" height="300"><br>After starting a new meeting you have the option of
+			<section><img src="img/3e.png" height="300"><br>After starting a new meeting you have the option of
 				testing
 				your audio setup. Afterwards choose 'Join With Computer Audio'</section>
 			<section><img src="img/tba.png" height="300"><br>Hitting start video on the bottom toolbar will start
