--- a/zoom/index.html
+++ b/zoom/index.html
@@ -27,7 +27,8 @@
 <body>
 	<div class="reveal">
 		<div class="slides">
-			<section><br>SFAI Zoom Training</section>
+			<section><br>SFAI Zoom Training<br>
+			(hit space to advance slides)</section>
 
 			<section><img src="img/z1.png" height="400"><br>Zoom is a remote conferencing services that combines
 				video conferencing, online meetings, chat, and mobile collaboration.</section>
@@ -83,16 +84,31 @@
 				video settings and use virtual backgrounds</section>
 			<section><img src="img/inv1.png" height="300"><br>The invite button allows you to invite participants
 			</section>
-			<section><img src="img/inv2.png" height="300"><br>In the contact view, all SFAI staff Faculty and
-				students
-				are listed
+			<section><img src="img/inv2.png" height="300"><br>In the contact view, you will see the SFAI email directory listed.
 			</section>
 			<section><img src="img/inv3.png" height="300"><br>On the email tab you can compose an email to send out
 				from
 				your default email client
 			</section>
+			<section>This is good for setting up quick meeting. In a little bit Patrick will present on how to set up recurring class meetings in google calendar and moodle
+			</section>
 			<section><img src="img/inv4.png" height="300"><br>You can also copy and paste the meeting URL or more
-				detailed invite and past it into an email or document i.e Moodle
+				detailed invite and paste it into an email or document i.e Moodle
+			</section>
+			<section><img src="img/si1.png" height="300"><br>Your invitees will get an invitation like this
+			</section>
+			<section><img src="img/si2.png" height="300"><br>When they click on the link they will be prompted in install zoom if thay hve not already. If you zoom client is installed they will be prompted to open it.
+			</section>
+			<section><img src="img/si3.png" height="300"><br>Invitees(students) do no need an account. Only the host(Teacher) needs to be logged in.
+			</section>
+			<section><img src="img/6.PNG" height="300"><br>Once the host enters the meeting all participants will appear.
+			</section>
+			<section> 
+			</section>
+			<section>
+				<ul>
+					<li>It is suggested that you start your first class meeting and invite everyone ~15 minutes early.</li>
+				</ul>
 			</section>
 			<section><img src="img/ss.png" height="300"><br>Share screen allows you to share your screen with
 				participants
@@ -103,6 +119,13 @@
 			</section>
 			<section><img src="img/ss3.png" height="300"><br>Or an individual window
 			</section>
+			<section><img src="img/ss_a.png" height="400"><br>When sharing you screen the toolbar weill become a floating toolbar
+			</section>
+			<section><img src="img/ss_b.png" height="400"><br>It also offers screen annotation tools.
+			</section>
+			<section><a href="https://support.zoom.us/hc/en-us/articles/115005706806-Using-annotation-tools-on-a-shared-screen-or-whiteboard">Further documentation on the annotation tools</a>
+			</section>
+			
 			<section><img src="img/mp.png" height="300"><br>Manage partipants allows gives you option for individual
 				participants
 			</section>
@@ -112,6 +135,9 @@
 				remove
 				them
 			</section>
+			<section><a href="https://support.zoom.us/hc/en-us/articles/115005759423-Managing-participants-in-a-meeting">Further documentation on managing participants</a>
+			</section>
+			
 			<section><img src="img/c.png" height="300"><br>Chat opens a chat window on the side
 			</section>
 			<section><img src="img/c1.png" height="300"><br>You can post text and links here
@@ -123,6 +149,9 @@
 				whom
 				others are allowed to chat with.
 			</section>
+			<section><a href="https://support.zoom.us/hc/en-us/articles/115004789183-Replying-and-managing-chat-messages">Further documentation on managing chat</a>
+			</section>
+			
 			<section><img src="img/r.png"><br>Record allows you to record the meeting to either your computer or the
 				Zoom cloud. You have limited storage on the Zoom cloud. Consider saving to you computer and sharing
 				as a
