--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                 Meetings for Education Training</a></li>
         <li><a href="https://support.zoom.us/hc/en-us/articles/206618765-Zoom-Video-Tutorials">Zoom Video Tutorials</a>
         </li>
-
+        <li><a href="https://sfai.github.io/onlinetraining/zoom/">SFAI Zoom workshop slides(presented in the online
+                sessions)</a>
+        </li>
         <!-- <li><a href="meet/GoogleMeet.pdf">Using Google Meet for online classes</a></li>
         <li><a href="meet/Scheduling_Recurring_Classes_Google_Meet.pdf">Scheduling Recurring Classes with Google
                 Meet</a></li>
