--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         <li><a href="https://sfai.github.io/onlinetraining/zoom/">SFAI Zoom workshop slides(presented in the online
                 sessions)</a>
         </li>
+        <li><a
+                href="https://docs.google.com/document/d/1_b5jqGyWilS_xRZu84qdfdZA7KKg27vNeNnGUeKgbcc/edit#heading=h.t1fvy9bq7mn9">Adding
+                Zoom Conferencing to a Moodle Course</a>
+        </li>
         <!-- <li><a href="meet/GoogleMeet.pdf">Using Google Meet for online classes</a></li>
         <li><a href="meet/Scheduling_Recurring_Classes_Google_Meet.pdf">Scheduling Recurring Classes with Google
                 Meet</a></li>
