--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 
         <li><a href="zoom/Activating_Zoom_from_Gmail.pdf">Activating Zoom from Gmail(Start Here)</a></li>
         <li><a href="zoom/Zoom_setup_instructions_for_SFAI_Faculty_Staff.pdf">Zoom Setup With Google Calendar</a></li>
+        <li><a href="zoom/Joining_a_Zoom_meeting_for_Students.pdf">Guide for Students on How to Join a Zoom Meeting</a>
+        </li>
         <li><a
                 href="https://sfai.zoom.us/rec/play/ucYoIumtq243G9fAswSDUPArW9W-eKis1Cga8_EPmk7mAnFQMAevZ7IQZefBr9eLpOtBNxuUZZ4WFxrQ?continueMode=true">Getting
                 Started with Zoom</a></li>
@@ -53,6 +55,7 @@
                 Meetings for Education Training</a></li>
         <li><a href="https://support.zoom.us/hc/en-us/articles/206618765-Zoom-Video-Tutorials">Zoom Video Tutorials</a>
         </li>
+
         <li><a
                 href="https://docs.google.com/document/d/1_b5jqGyWilS_xRZu84qdfdZA7KKg27vNeNnGUeKgbcc/edit#heading=h.t1fvy9bq7mn9">Adding
                 Zoom Conferencing to a Moodle Course</a>
