--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="img/logo-sfai-nav-horizontal.png" height="52">
     </nav>
 
-    <h1>Online Support for Instructors and Students</h1>
+    <h1>Online Support for SFAI Instructors</h1>
     <p>We now have an institutional ZOOM account, which you each can access to set up recurring class meetings, among
         other functionalities. While you may use a different platform, and one that may be more familiar to you, <b>we
             encourage you to attend a training on Zoom over the coming weeks and to consider using this more robust
