--- a/zoom/index.html
+++ b/zoom/index.html
@@ -106,6 +106,9 @@
 			<section><img src="img/si3.png" height="300"><br>Invitees(students) do no need an account. Only the
 				host(Teacher) needs to be logged in.
 			</section>
+			<section><a href="zoom/Joining_a_Zoom_meeting_for_Students.pdf">Guide for Students on How to Join a Zoom
+					Meeting</a>
+			</section>
 			<section><img src="img/6.PNG" height="300"><br>Once the host enters the meeting all participants will
 				appear.
 			</section>
@@ -180,7 +183,12 @@
 					extensive video tutorials</a>
 			</section>
 			<section>
-				We are here to support your online efforts, please email support@sfai.edu for assistance
+				<ul>
+					<li>We are here to support your online efforts, please email support@sfai.edu for assistance
+					</li>
+					<a href="https://sfai.github.io/onlinetraining/">Online Support for Instructors and Students</a>
+				</ul>
+
 			</section>
 
 
