--- a/zoom/index.html
+++ b/zoom/index.html
@@ -45,9 +45,9 @@
 			<section><br>
 				<ul>
 					<li>This first step is to activate your account</li>
-					<li class="fragment"><a
-							href="https://sfai.github.io/onlinetraining/zoom/Zoom_setup_instructions_for_SFAI_Faculty_Staff.pdf">SFAI
+					<li class="fragment"><a href="Activating_Zoom_from_Gmail.pdf">SFAI
 							setup instructions</a></li>
+					<li class="fragment">Patrick just went over this. Link is here for reference</li>
 					<li class="fragment">If you need support with this, email support@sfai.edu or stay in the Q&A
 						afterwards
 					</li>
@@ -61,7 +61,7 @@
 			</section>
 			<section><img src="img/1.PNG" height="300"><br>When you first launch Zoom sign in with Google</section>
 			<section><img src="img/2.PNG" height="300"><br>Make sure to sign in with your SFAI account</section>
-			<section><img src="img/3.PNG" height="300"><br>You will be redirected to your webbrowser to login in,
+			<section><img src="img/3.PNG" height="300"><br>You will be redirected to your web browser to login in,
 				then
 				Open Zoom.</section>
 			<section><img src="img/3a.PNG" height="300"><br>In the opening Zoom window
@@ -186,7 +186,7 @@
 				<ul>
 					<li>We are here to support your online efforts, please email support@sfai.edu for assistance
 					</li>
-					<a href="https://sfai.github.io/onlinetraining/">Online Support for Instructors and Students</a>
+					<a href="https://sfai.github.io/onlinetraining/">Online Support for Instructors</a>
 				</ul>
 
 			</section>
