--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <li><a href="zoom/Activating_Zoom_from_Gmail.pdf">Activating Zoom from Gmail(Start Here)</a></li>
         <li><a href="zoom/Zoom_setup_instructions_for_SFAI_Faculty_Staff.pdf">Zoom Setup With Google Calendar</a></li>
-        <li><a href="zoom/Joining_a_Zoom_meeting_for_Students.pdf">Guide for Students on How to Join a Zoom Meeting</a>
+        <li><a href="https://sfai.github.io/onlinetraining/zoom/Joining_a_Zoom_meeting_for_Students.pdf">Guide for Students on How to Join a Zoom Meeting</a>
         </li>
         <li><a
                 href="https://sfai.zoom.us/rec/play/ucYoIumtq243G9fAswSDUPArW9W-eKis1Cga8_EPmk7mAnFQMAevZ7IQZefBr9eLpOtBNxuUZZ4WFxrQ?continueMode=true">Getting
