--- a/zoom/index.html
+++ b/zoom/index.html
@@ -106,7 +106,7 @@
 			<section><img src="img/si3.png" height="300"><br>Invitees(students) do no need an account. Only the
 				host(Teacher) needs to be logged in.
 			</section>
-			<section><a href="zoom/Joining_a_Zoom_meeting_for_Students.pdf">Guide for Students on How to Join a Zoom
+			<section><a href="https://sfai.github.io/onlinetraining/zoom/Joining_a_Zoom_meeting_for_Students.pdf">Guide for Students on How to Join a Zoom
 					Meeting</a>
 			</section>
 			<section><img src="img/6.PNG" height="300"><br>Once the host enters the meeting all participants will
