--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
     <ul>
         <li><b>Tuesday, March 17/Wednesday, March 18/Thursday, March 19: 2-3pm PST - </b> Join Zoom Meeting: <a
                 href="https://zoom.us/j/818667483">https://zoom.us/j/818667483</a></li>
-        <li><b>Tuesday, March 24/Wednesday, March 25/Thursday, March 26: 11am-12pm PST - </b> Join Zoom Meeting: <a
+        <li><b>Wednesday, March 25: 12-1pm PST - </b> Join Zoom Meeting: <a
+                href="https://zoom.us/j/818667483">https://zoom.us/j/818667483</a></li>
+        <li><b>Tuesday, March 24/Thursday, March 26: 11am-12pm PST - </b> Join Zoom Meeting: <a
                 href="https://zoom.us/j/734800927">https://zoom.us/j/734800927</a></li>
 
     </ul>
