--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 
         <li><a href="zoom/Activating_Zoom_from_Gmail.pdf">Activating Zoom from Gmail(Start Here)</a></li>
         <li><a href="zoom/Zoom_setup_instructions_for_SFAI_Faculty_Staff.pdf">Zoom Setup With Google Calendar</a></li>
-        <li><a href="https://sfai.github.io/onlinetraining/zoom/Joining_a_Zoom_meeting_for_Students.pdf">Guide for Students on How to Join a Zoom Meeting</a>
+        <li><a href="https://sfai.github.io/onlinetraining/zoom/Joining_a_Zoom_meeting_for_Students.pdf">Guide for
+                Students on How to Join a Zoom Meeting</a>
         </li>
         <li><a
                 href="https://sfai.zoom.us/rec/play/ucYoIumtq243G9fAswSDUPArW9W-eKis1Cga8_EPmk7mAnFQMAevZ7IQZefBr9eLpOtBNxuUZZ4WFxrQ?continueMode=true">Getting
@@ -86,8 +87,6 @@
     with an overview of the Zoom features, followed by an open Q&A. If you have any trouble joining, please email
     support@sfai.edu.<br><br>
     <ul>
-        <li><b>Tuesday, March 17/Wednesday, March 18/Thursday, March 19: 2-3pm PST - </b> Join Zoom Meeting: <a
-                href="https://zoom.us/j/818667483">https://zoom.us/j/818667483</a></li>
         <li><b>Wednesday, March 25: 12-1pm PST - </b> Join Zoom Meeting: <a
                 href="https://zoom.us/j/818667483">https://zoom.us/j/818667483</a></li>
         <li><b>Tuesday, March 24/Thursday, March 26: 11am-12pm PST - </b> Join Zoom Meeting: <a
