--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
         <li><a href="https://sfai.github.io/onlinetraining/zoom/">SFAI Zoom workshop slides(presented in the online
                 sessions)</a>
         </li>
+        <li><a href="https://groups.google.com/a/sfai.edu/forum/#!forum/users.zoom">Zoom users Forum</a>
+        </li>
         <!-- <li><a href="meet/GoogleMeet.pdf">Using Google Meet for online classes</a></li>
         <li><a href="meet/Scheduling_Recurring_Classes_Google_Meet.pdf">Scheduling Recurring Classes with Google
                 Meet</a></li>
