--- a/index.html
+++ b/index.html
@@ -48,11 +48,8 @@
         <li><a href="https://sfai.github.io/onlinetraining/zoom/Joining_a_Zoom_meeting_for_Students.pdf">Guide for Students on How to Join a Zoom Meeting</a>
         </li>
         <li><a
-                href="https://sfai.zoom.us/rec/play/ucYoIumtq243G9fAswSDUPArW9W-eKis1Cga8_EPmk7mAnFQMAevZ7IQZefBr9eLpOtBNxuUZZ4WFxrQ?continueMode=true">Getting
+                href="https://support.zoom.us/hc/en-us/categories/200101697-Getting-Started">Getting
                 Started with Zoom</a></li>
-        <li><a
-                href="https://sfai.zoom.us/rec/play/vJR5d-j5q283HNGcsgSDV_5wW9Tpe_qs0CVM_PIEmknkVnAAYVGlZuMaZ7NAORKJB_fFeWJ9L4d5ilrn?continueMode=true">Zoom
-                Meetings for Education Training</a></li>
         <li><a href="https://support.zoom.us/hc/en-us/articles/206618765-Zoom-Video-Tutorials">Zoom Video Tutorials</a>
         </li>
 
